fix/feat: show body inline option and fix tag labels alignment (#30, #29, #11)

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -1047,3 +1047,6 @@ label > input[type=radio]:checked ~ .customRadio:after{
 	-webkit-user-select:none;
 	user-select:none;
 }
+body.tagLabelsRightAligned .tagsWrapper {
+	margin-left: auto;
+}
